<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:orientation="vertical"
                  android:paddingBottom="@dimen/activity_vertical_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  tools:context="edu.upc.pes.agora.Presentation.LoginActivity">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_gravity="right"
                      android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiidioma"
                android:clickable="true"
                android:src="@mipmap/ic_language"
                android:focusable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="170dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/logo"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="320dp"
            android:id="@+id/username_up"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/username"
                android:hint="@string/hint_username"
                android:fontFamily="sans-serif"
                android:textColorHint="#e89b9696"
                android:textSize="16sp"
                android:textColor="#000"
                android:textCursorDrawable="@null"
                android:layout_margin="2sp"
                android:padding="10dp"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="320dp"
            android:id="@+id/password_up"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="15sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/hint_password"
                android:fontFamily="sans-serif"
                android:textColorHint="#e89b9696"
                android:textSize="16sp"
                android:textColor="#000"
                android:textCursorDrawable="@null"
                android:layout_margin="2sp"
                android:padding="10dp"
                android:textStyle="italic"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:text="@string/login"
                android:background="@drawable/botonlogin"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingRight="16dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="14sp"
                android:onClick="Login"
                android:visibility="visible"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loginprogressbar"
                android:layout_centerInParent="true"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:indeterminateDrawable="@drawable/progress_bar_circular_style"
                android:visibility="gone"/>

        </RelativeLayout>



        <LinearLayout android:layout_width="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="15dp"
                      android:layout_marginBottom="15dp"
                      android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/pre_registre"
                android:fontFamily="sans-serif"
                android:textSize="16dp"
                android:padding="5dp"
                android:textColor="#000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/SignIn"
                android:textSize="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="#3838e2"
                android:textAllCaps="true"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>