...
            android:layout_marginRight="10sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/identifier"
                android:hint="@string/prompt_identification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:textColorHint="#e89b9696"
...
